# cgol

./: CMakeLists.txt  README.txt  cgol.py  readme.md
includes/: constants.hpp  state.hpp  text.hpp  util.hpp
src/: constants.cpp  main.cpp  state.cpp  text.cpp  util.cpp
